# un-inception

./: .gitignore  .gitlab-ci.yml  AGGREGATED-PERFORMANCE.md  CLAUDE.md  LICENSE  Makefile  PIPELINE.md  PYTHON_C_INTEGRATION_SUMMARY.md  README.md  REFACTORING_CHECKLIST.md  TEST-TEMPLATES.md  TESTING-STRATEGY.md  Un.cs  Un.java  VERSION  science-results.xml  test-matrix.yml  un.awk  un.c  un.clj  un.cob  un.cpp  un.cr  un.d  un.dart  un.erl  un.ex  un.f90  un.forth  un.fs  un.go  un.groovy  un.h  un.hs  un.jl  un.js  un.kt  un.lisp  un.lua  un.m  (+20 more)
clients/: CLI_SPEC.md  README.md
clients/rust/async/: Cargo.toml
clients/rust/async/src/: lib.rs  main.rs
clients/rust/sync/: Cargo.toml  README.md
clients/rust/sync/examples/: async_polling.rs  fibonacci.rs  hello_world.rs  multi_language.rs
clients/rust/sync/src/: lib.rs  main.rs
clients/rust/sync/tests/: functional_test.rs  lib_test.rs  test_account_flag.sh
docs/: CI_DEBUGGING_2026-01-17.md  CI_PIPELINE.md  CI_POSTMORTEM_4.2.46.md  E2E_TEST_EXECUTION_SUMMARY.txt  E2E_TEST_INDEX.md  E2E_TEST_README.md  E2E_TEST_SUMMARY.md  EXAMPLES-VALIDATION.md  IMPLEMENTATION-SUMMARY.md  INCEPTION-TESTING.md  README.md  TESTING.md
e2e-test-results/: changes.json  examples-validation-results.json  final-report.xml
lint-results/: lint-results.xml
reports/: PERFORMANCE-HISTORY.md  aggregate-25-26.md  aggregate-27-28.md
science-results/: examples-validation-results.html  examples-validation-results.json
scripts/: aggregate-performance-reports.py  build-clients.sh  cleanup-test-resources.sh  collect-pool-metrics.sh  detect-changes.sh  filter-results.sh  generate-aggregated-charts.py  generate-matrix.sh  generate-perf-charts.py  generate-perf-report.sh  set-version.sh  test-sdk.sh  validate-examples.sh
services/: egress-iptables.service  microsocks.service  redsocks.conf  redsocks.service
test/: fib.c  fib.clj  fib.cob  fib.cpp  fib.cr  fib.cs  fib.d  fib.dart  fib.erl  fib.ex  fib.f90  fib.forth  fib.fs  fib.go  fib.groovy  fib.hs  fib.java  fib.jl  fib.js  fib.kt  fib.lisp  fib.lua  fib.m  fib.ml  fib.nim  fib.php  fib.pl  fib.pro  fib.py  fib.r  fib.raku  fib.rb  fib.rs  fib.scm  fib.sh  fib.tcl  fib.ts  fib.v  fib.zig  qr.awk  (+42 more)
tests/: AGENT_REFACTORING_INSTRUCTIONS.md  FILES_CREATED.txt  INDEX.md  QUICKSTART.md  README.md  SDK_TESTING_GUIDE.md  SUMMARY.md  TESTING_SUMMARY.md  TEST_README.md  TEST_SUMMARY.md  TestUn.cs  TestUn.java  fib.go  fib.java  run_all_tests.sh  run_basic_tests.sh  run_compiled_tests.sh  run_inception_matrix.sh  run_matrix.sh  run_sdk_tests.sh  test_e2e_pipeline.sh  test_full_features.sh  test_un_c.c  (+45 more)
(+494 files in other folders)
