# PUBLIC DOMAIN - NO LICENSE, NO WARRANTY
#
# unsandbox.com Rust SDK (Asynchronous)
#
# Crate: un-async
# Type: Library (async reqwest with tokio)

[package]
name = "un-async"
version = "4.2.38"
edition = "2021"
authors = ["unsandbox.com"]
description = "Asynchronous Rust SDK for unsandbox.com secure code execution API"
repository = "https://github.com/unsandbox/un-inception"
license = "Unlicense"
keywords = ["unsandbox", "code-execution", "sandbox", "api-client", "async"]
categories = ["api-bindings", "development-tools", "asynchronous"]

[lib]
name = "un_async"
path = "src/lib.rs"

[[bin]]
name = "un-async"
path = "src/main.rs"

[dependencies]
# HTTP client (async)
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["rt", "time", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HMAC-SHA256 authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Home directory detection
dirs = "5.0"

# Error handling
thiserror = "2.0"

[dev-dependencies]
# Testing with async
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
mockito = "1.2"

[features]
default = []
